--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,7 @@ footer .social li:last-child {
 }
 
 footer .social li a {
+    cursor: pointer;
     margin: 0;
     display: block;
     width: 100%;
